# beckn-catalog-loader

./: .gitignore  pyproject.toml
src/: bulk_loader.py  flatten_catalog.py  main.py  parse_catalog.py
