[project]
name = "beckn-catalog-loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "certifi >= 2025.1.31",
  "charset-normalizer >= 3.4.1",
  "elastic-transport >= 8.17.1",
  "elasticsearch >= 9.0.0",
  "idna >= 3.10",
  "python-dateutil >= 2.9.0.post0",
  "requests >= 2.32.3",
  "six >= 1.17.0",
  "tqdm >= 4.67.1",
  "typing_extensions >= 4.13.2",
  "urllib3 >= 2.4.0",
]
